--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 #nav-nenu ul{
   display: inline-block;
   list-style-type: none;
-  margin-left: 50%;
+  margin-left: 40%;
 }
 
 #nav-menu ul li{
@@ -30,14 +30,83 @@
   margin-right: 30px;
 }
 
-#nav-menu a{
+a{
   text-decoration: none;
-  color: #555
+  color: #031d44;
+}
+
+.nav-r{
+  padding: 5px 20px;
+  border-width: 1.6px;
+  border-radius: 5px;
+  margin-left: 8px;
+}
+
+#search-space{
+  border-radius: 10px;
+  border-color: #001233;
+  color: #0a1128;
+  opacity: 30%;
+  width: 300px;
+  margin-right: 30px;
 }
 
 .container{
   max-width: 1300px;
   margin: auto;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+#cart{
+  background: #136f63;
+  color: #fff;
+  border-radius: 5px;
+  border-width: 0.5px;
+  padding: 5px 15px;
+}
+#profile{
+  background: #ffe45e;
+  color: black;
+  border-radius: 5px;
+  border-width: 0.5px;
+  padding: 5px 15px;
+}
+
+.hero{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.hero-text{
+  color: #001233;
+  flex-basis: 40%;
+  min-width: 300px;
+}
+
+.hero-img img{
+  max-width: 600px;
+}
+
+.hero-text h1{
+  font-size: 70px;
+  line-height: 60px;
+  margin: 20px 0;
+  margin-top: 40px;
+}
+
+.btn{
+  display: inline-block;
+  background: #003459;
+  color: #fff;
+  padding: 8px 30px;
+  margin: 30px 0;
+  border-radius: 20px;
+}
+
+.header{
+  background: radial-gradient(#012a4a,#a9d6e5)
 }
